--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,17 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+<%= form_with model: @book, method: :patch do |f| %>
+  <P>Title</p>
+  <%= f.text_field :title %>
+  <P>body</p>
+  <%= f.text_area :body %>
+
+   <p><%= f.submit 'Update Book' %></p>
+
+   <p>
+    <%= link_to "Show", book_path(@book.id) %>
+    <%= link_to "Back",  '/books/new' %>
+  </p>
+
+<% end %>
+
+   
