--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,31 @@
-<h1>Books#new</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<h1>Books</h1>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+    <th></th>
+  </tr>
+  <% @book2.each do |f| %>
+    <tr>
+      <th><%= f.title %></th>
+      <th><%= f.body %></th>
+      <th>
+        <%= link_to "Show", "/books/#{f.id}" %>
+        <%= link_to "Edit", edit_book_path(f.id) %>
+        <%= link_to "Detroy", book_path(f.id), method: :delete, "data-confim" => "Are you sure?" %>
+      <th>
+    </tr>
+  <% end %>
+</table>
+
+
+
+</table>
+<h1>New book</h1>
+<%= form_with model: @book do |f| %>
+<h4>Ttile</h4>
+<%= f.text_field :title %>
+<h4>body</h4>
+<%= f.text_field :body %>
+<P><%= f.submit 'Create Book' %></p>
+<% end %> 
