--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,4 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>ようこそ Bokersへ!</h1>
+<p>Bookersでは、さまざまな書籍に関するあなたの意見や</p>
+<P>印象を共有し交換することが出来ます</p>
+<%= link_to "start", new_book_path %>
