--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -9,7 +9,7 @@
 
    <p>
     <%= link_to "Show", book_path(@book.id) %>
-    <%= link_to "Back",  '/books/new' %>
+    <%= link_to "Back", books_path %>
   </p>
 
 <% end %>
