--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,22 +10,29 @@
       <th><%= f.title %></th>
       <th><%= f.body %></th>
       <th>
-        <%= link_to "Show", "/books/#{f.id}" %>
+        <%= link_to "Show", book_path(f.id) %>
         <%= link_to "Edit", edit_book_path(f.id) %>
-        <%= link_to "Detroy", book_path(f.id), method: :delete, "data-confim" => "Are you sure?" %>
+        <%= link_to "destroy", book_path(f.id), method: :delete, "data-confirm" => "Are you sure" %>
       <th>
     </tr>
   <% end %>
 </table>
 
 
-
-</table>
 <h1>New book</h1>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book do |f| %>
 <h4>Ttile</h4>
 <%= f.text_field :title %>
-<h4>body</h4>
+<h4>Body</h4>
 <%= f.text_field :body %>
 <P><%= f.submit 'Create Book' %></p>
 <% end %> 
