--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,4 @@
 <h1>ようこそ Bokersへ!</h1>
 <p>Bookersでは、さまざまな書籍に関するあなたの意見や</p>
 <P>印象を共有し交換することが出来ます</p>
-<%= link_to "start", new_book_path %>
+<%= link_to "start", books_path %>
